--- a/Frontend/bs4_todo_list.html
+++ b/Frontend/bs4_todo_list.html
@@ -10,41 +10,63 @@
 <body>
 <div class="container-fluid">
   <div class="row">
-    <!-- Sidebar لل Lists -->
+    <!-- Sidebar -->
     <div class="col-md-4 bg-light sidebar p-3">
-      <h5>Lists</h5>
 
-      <!-- Add List Form (hidden by default) -->
-      <div class="add-list-form mb-2 d-none">
-        <input type="text" class="form-control mb-1 add-list-name" placeholder="List Name">
-        <input type="text" class="form-control mb-1 add-list-desc" placeholder="Description">
-        <button class="btn btn-success btn-sm save-list-btn">Save</button>
-        <button class="btn btn-secondary btn-sm cancel-list-btn">Cancel</button>
+      <!-- All Items Collapsible -->
+      <div class="all-items-section mb-3">
+        <div class="collapse-header" data-toggle="collapse" data-target="#allItemsContent">
+          All Items
+          <span class="toggle-icon">▼</span>
+        </div>
+        <div id="allItemsContent" class="collapse show">
+          <button class="btn btn-success btn-sm show-add-item-btn mb-2">Add</button>
+
+          <!-- Add Item Form -->
+          <div class="add-item-form mb-2 d-none">
+            <input type="text" class="form-control mb-1 add-task" placeholder="New Item Name">
+            <input type="text" class="form-control mb-1 add-task-desc" placeholder="Description">
+<button type="button" class="btn btn-primary btn-sm save-new-item-btn">Save</button>
+            <button type="button" class="btn btn-secondary btn-sm cancel-item-btn">Cancel</button>
+          </div>
+
+          <ul class="list-group all-items-list mb-3"></ul>
+        </div>
       </div>
 
-      <button class="btn btn-primary btn-sm show-add-list-btn mb-2">Add List</button>
-      <ul class="list-group list-of-lists mb-3"></ul>
+      <!-- Lists Collapsible -->
+      <div class="lists-section">
+        <div class="collapse-header" data-toggle="collapse" data-target="#listsContent">
+          Lists
+          <span class="toggle-icon">▼</span>
+        </div>
+        <div id="listsContent" class="collapse show">
+          <button class="btn btn-success btn-sm show-add-list-btn mb-2">Add</button>
+
+          <!-- Add List Form -->
+          <div class="add-list-form mb-2 d-none">
+            <input type="text" class="form-control mb-1 add-list-name" placeholder="List Name">
+            <input type="text" class="form-control mb-1 add-list-desc" placeholder="Description">
+            <button class="btn btn-success btn-sm save-list-btn">Save</button>
+            <button class="btn btn-secondary btn-sm cancel-list-btn">Cancel</button>
+          </div>
+
+          <ul class="list-group list-of-lists mb-3"></ul>
+        </div>
+      </div>
+
     </div>
 
-    <!-- Main Area -->
+    <!-- Main Tasks Area -->
     <div class="col-md-8">
       <div class="card card-white">
         <div class="card-body">
-          <!-- Form إضافة مهمة -->
-          <form class="d-flex mb-3">
-            <input type="text" class="form-control add-task" placeholder="New Task...">
-            <input type="text" class="form-control ml-2 add-task-desc" placeholder="Description...">
-            <button type="button" class="btn btn-primary ml-2 add-btn">Add</button>
-          </form>
-
-          <!-- فلترة Tasks -->
+          <h5>Tasks of Selected List</h5>
           <ul class="nav nav-pills todo-nav mb-3">
             <li class="nav-item"><a href="#" class="nav-link active">All</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Active</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Completed</a></li>
           </ul>
-
-          <!-- قائمة المهام -->
           <div class="todo-list"></div>
         </div>
       </div>
@@ -52,12 +74,12 @@
   </div>
 </div>
 
-<!-- Modal لتعديل Item -->
+<!-- Edit Item Modal -->
 <div class="modal fade" id="editItemModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content p-3">
       <h5>Edit Item</h5>
-      <input type="text" class="form-control mb-2 edit-item-name" placeholder="Task Name">
+      <input type="text" class="form-control mb-2 edit-item-name" placeholder="Item Name">
       <input type="text" class="form-control mb-2 edit-item-desc" placeholder="Description">
       <button class="btn btn-success save-item-btn">Save</button>
       <button class="btn btn-secondary close-item-btn" data-bs-dismiss="modal">Cancel</button>
