--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -61,7 +61,10 @@
     <div class="col-md-8">
       <div class="card card-white">
         <div class="card-body">
-          <h5>Tasks of Selected List</h5>
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <h5>Tasks of Selected List</h5>
+            <button class="btn btn-outline-danger btn-sm" id="logoutBtn">Logout</button>
+          </div>
           <ul class="nav nav-pills todo-nav mb-3">
             <li class="nav-item"><a href="#" class="nav-link active">All</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Active</a></li>
@@ -82,13 +85,15 @@
       <input type="text" class="form-control mb-2 edit-item-name" placeholder="Item Name">
       <input type="text" class="form-control mb-2 edit-item-desc" placeholder="Description">
       <button class="btn btn-success save-item-btn">Save</button>
-      <button class="btn btn-secondary close-item-btn" data-bs-dismiss="modal">Cancel</button>
+      <button class="btn btn-secondary close-item-btn" data-dismiss="modal">Cancel</button>
     </div>
   </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/auth.js"></script>
+<script src="js/api.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
